trying to fix spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,7 +7,6 @@
   color: #484d56;
 }
 body {
-  font-family: "HelveticaNeue-Light";
   text-align: center;
 }
 .site-container {
@@ -27,12 +26,16 @@ background-color: white;
 }
 
 .nav-link {
+  display: inline-flex;
   text-decoration: none;
   color: #484d56;
-  margin: 5%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: 4%;
   font-size: 35px;
   display: inline-block;
   font-family: 'Open Sans Condensed', sans-serif;
+  text-align: center;
 }
 .welcome{
   color: white;
@@ -46,7 +49,6 @@ background-color: white;
     .site-content {
       width: 80%;
     }
-}
 
 @media (min-width: 1000px) {
     .site-content {
